--- a/notebooks/hpo.ipynb
+++ b/notebooks/hpo.ipynb
@@ -16,8 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import optuna\n",
-    "import matplotlib.pyplot as plt"
+    "import optuna"
    ]
   },
   {
@@ -26,7 +25,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Load the study\n",
     "study = optuna.load_study(study_name=\"\", storage=\"\")"
    ]
@@ -67,10 +65,10 @@
     "\n",
     "trial = study.best_trial\n",
     "\n",
-    "print('Value: ', trial.value)\n",
-    "print('Params: ')\n",
+    "print(\"Value: \", trial.value)\n",
+    "print(\"Params: \")\n",
     "for key, value in trial.params.items():\n",
-    "    print(f'    {key}: {value}')"
+    "    print(f\"    {key}: {value}\")"
    ]
   }
  ],
